#92 - Update health cards to include contextual link to Terraform
