# plugins/terraform-backend/src/schema/openapi.yaml
@@ -89,6 +89,17 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/assessmentResults'
+  '/terraform-config':
+    get:
+      description: Returns the Terraform configuration data being used by the plugin.
+      operationId: getTerraformConfiguration
+      responses:
+        '200':
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/terraformConfiguration'
 components:
   schemas:
     health:
@@ -221,3 +232,12 @@ components:
         checksUnknown:
           type: number
           example: 0
+    terraformConfiguration:
+      title: Terraform Configuration
+      type: object
+      required:
+        - baseUrl
+      properties:
+        baseUrl:
+          type: string
+          example: https://app.terraform.io
